# MyEducationalProjects

./: .gitignore  README.md
1/: client.c  server.c
2/: City.cpp  Makefile  Province.cpp  Store.cpp  StoreCalculator.cpp  utils.cpp  utils.h
2/Tester/: judge.sh
2/Tester/testcases/: 1.txt  2.txt  3.txt  4.out  4.txt  5.out  5.txt  6.out  6.txt
2/inputs/: commands2.txt  sample_output.txt  sample_output2.txt
3/parallel/: Makefile  PhonePricePrediction.out  main.cpp
3/parallel/dataset5t/: main.cpp  train_0.csv  train_1.csv  train_2.csv  train_3.csv  train_4.csv
3/serial/: PhonePricePrediction.out  main.cpp
5/Creational/AbstractFactory/: CMakeLists.txt  runner.sh
5/Creational/AbstractFactory/include/: car.h  motorcycle.h  saipa_factory.h  vehicle_factory.h
5/Creational/AbstractFactory/src/: car.cpp  main.cpp  motorcycle.cpp  saipa_factory.cpp
5/Creational/Builder/: CMakeLists.txt  runner.sh
5/Creational/Builder/include/: chef.h  italian_builder.h  pizza_builder.h  stats_builder.h
5/Creational/Builder/src/: chef.cpp  italian_builder.cpp  main.cpp  stats_builder.cpp
5/Creational/Prototype/: CMakeLists.txt  runner.sh
5/Creational/Prototype/include/: head.h  human_creator.h
5/Creational/Prototype/src/: head.cpp  human_creator.cpp  main.cpp
5/Creational/Singlaton/: CMakeLists.txt  runner.sh
5/Creational/Singlaton/include/: logger.h
5/Creational/Singlaton/src/: logger.cpp  main.cpp
5/Structional/Adapter/: CMakeLists.txt  runner.sh
5/Structional/Adapter/include/: third_party.h  weather_stats.h
5/Structional/Adapter/src/: main.cpp  third_party.cpp
5/Structional/Bridge/: CMakeLists.txt  runner.sh
5/Structional/Bridge/include/: message_application.h  message_platforms.h
5/Structional/Bridge/src/: main.cpp  message_application.cpp  message_platforms.cpp
6/: README.md
6/mysite/mysite/: settings.py
6/mysite/polls/: views.py
6/mysite/polls/migrations/: 0001_initial.py
(+14 files in other folders)
